Resolve inline margins in over-constrained situations correctly.

In regular block layout, the width of a child's margin box should always
be equal to that of its containing block.

BUG=708751

Review-Url: https://codereview.chromium.org/2841823006
Cr-Commit-Position: refs/heads/master@{#472619}

Former-commit-id: 34d81295269809c64d9e12a5921db3ada416a043